Bug 252116 - Editing Contact Group crashes kaddress-mobile
Summary: Editing Contact Group crashes kaddress-mobile
Status: CLOSED FIXED
Alias: None
Product: KAddressbook Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-23 11:23 UTC by Felix Wolfsteller
Modified: 2010-09-30 10:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Wolfsteller 2010-09-23 11:23:54 UTC
Created an (empty) Contact Group in "Personal Contacts".
When I now touch this group and then touch the edit icon, I see a splash screen and for very short the input dialog, but then kaddressbook crashes.

Observed in 4:4.5~20100922.1178352-1maemo1.1177763 .
Comment 1 Volker Krause 2010-09-28 16:30:31 UTC
I am unable to reproduce this crash here, could you please provide a backtrace?
Comment 2 Felix Wolfsteller 2010-09-29 09:37:58 UTC
From version 4:4.5~20100928.1180427-1maemo1.1180334 .
Do you need more info (I guess I'd had to install other dbg-packages)?

(gdb) c
Continuing.

Program received signal SIGSEGV, Segmentation fault.
0x40428ce0 in KABC::ContactGroup::ContactReference::uid() const ()
   from /usr/lib/libkabc.so.4
0x40428ce0 <_ZNK4KABC12ContactGroup16ContactReference3uidEv+0>:	ldr	r1, [r1]
(gdb) bt
#0  0x40428ce0 in KABC::ContactGroup::ContactReference::uid() const ()
   from /usr/lib/libkabc.so.4
warning: (Internal error: pc 0x370eb in read in psymtab, but not in symtab.)

#1  0x000370ec in ?? (warning: (Internal error: pc 0x370eb in read in psymtab, but not in symtab.)
Comment 3 Bjoern Ricks 2010-09-29 10:03:15 UTC
Some more debug output:

(gdb) bt
#0  KABC::ContactGroup::ContactReference::uid (this=0x0) at /home/maemo-tags/default/work/kdepimlibs-4.5~20100927.1180230/kabc/contactgroup.cpp:79
#1  0x000370f0 in EditorContactGroup::loadContactGroup (this=0x9180a0, contactGroup=...) at /home/maemo-tags/default/work/kdepim-4.5~20100927.1180229/mobile/contacts/editorcontactgroup.cpp:356
#2  0x0002bdf4 in ContactGroupEditorView::Private::load (this=0x8c2b20, item=...) at /home/maemo-tags/default/work/kdepim-4.5~20100927.1180229/mobile/contacts/contactgroupeditorview.cpp:113
#3  0x40847aac in IncidenceEditorNG::EditorItemManager::load (this=0x8c28f0, item=...) at /home/maemo-tags/default/work/kdepim-4.5~20100927.1180229/incidenceeditor-ng/editoritemmanager.cpp:221
#4  0x40847de4 in IncidenceEditorNG::ItemEditorPrivate::itemFetchResult (this=0x8c29a8, job=<value optimized out>)
    at /home/maemo-tags/default/work/kdepim-4.5~20100927.1180229/incidenceeditor-ng/editoritemmanager.cpp:89
#5  0x40847ee4 in IncidenceEditorNG::EditorItemManager::qt_metacall (this=0x8c28f0, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0xbe88eeb0)
    at /home/maemo-tags/default/work/kdepim-4.5~20100927.1180229/obj-arm-linux-gnueabi/incidenceeditor-ng/editoritemmanager.moc:95
#6  0x42270bf4 in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /opt/qt4-maemo5/lib/libQtCore.so.4
#7  0x42287b98 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /opt/qt4-maemo5/lib/libQtCore.so.4
#8  0x41f1baa8 in KJob::result(KJob*) () from /usr/lib/libkdecore.so.5
#9  0x41f1c60c in KJob::emitResult() () from /usr/lib/libkdecore.so.5
#10 0x4053a060 in Akonadi::JobPrivate::delayedEmitResult (this=<value optimized out>) at /home/maemo-tags/default/work/kdepimlibs-4.5~20100927.1180230/akonadi/job.cpp:143
#11 0x4053ac5c in Akonadi::Job::qt_metacall (this=0x8292d8, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x909df8)
    at /home/maemo-tags/default/work/kdepimlibs-4.5~20100927.1180230/obj-arm-linux-gnueabi/akonadi/job.moc:91
#12 0x4052c864 in Akonadi::ItemFetchJob::qt_metacall (this=0xbe88ed40, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x907c80)
    at /home/maemo-tags/default/work/kdepimlibs-4.5~20100927.1180230/obj-arm-linux-gnueabi/akonadi/itemfetchjob.moc:73
#13 0x42270bf4 in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /opt/qt4-maemo5/lib/libQtCore.so.4
#14 0x4227f444 in QMetaCallEvent::placeMetaCall(QObject*) () from /opt/qt4-maemo5/lib/libQtCore.so.4
#15 0x42280a18 in QObject::event(QEvent*) () from /opt/qt4-maemo5/lib/libQtCore.so.4
#16 0x414761b0 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /opt/qt4-maemo5/lib/libQtGui.so.4
#17 0x41478914 in QApplication::notify(QObject*, QEvent*) () from /opt/qt4-maemo5/lib/libQtGui.so.4
warning: (Internal error: pc 0x6c4cf in read in psymtab, but not in symtab.)

#18 0x0006c4d0 in ?? (warning: (Internal error: pc 0x6c4cf in read in psymtab, but not in symtab.)

)
warning: (Internal error: pc 0x6c4cf in read in psymtab, but not in symtab.)

warning: (Internal error: pc 0x6c4cf in read in psymtab, but not in symtab.)

warning: (Internal error: pc 0x6c4cf in read in psymtab, but not in symtab.)

warning: (Internal error: pc 0x6c4cf in read in psymtab, but not in symtab.)

#19 0x0006c4d0 in ?? (warning: (Internal error: pc 0x6c4cf in read in psymtab, but not in symtab.)

)
warning: (Internal error: pc 0x6c4cf in read in psymtab, but not in symtab.)

warning: (Internal error: pc 0x6c4cf in read in psymtab, but not in symtab.)

Backtrace stopped: previous frame identical to this frame (corrupt stack?)
Comment 4 Volker Krause 2010-09-29 15:35:12 UTC
SVN commit 1180944 by vkrause:

Don't crash when trying to edit an empty contact group.

BUG: 252116


 M  +1 -1      editorcontactgroup.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1180944
Comment 5 Felix Wolfsteller 2010-09-30 10:38:28 UTC
Works as expected in version 4:4.5~20100930.1181090-1maemo1.1180919_094336 .