Don't crash when trying to edit an empty contact group.

BUG: 252116

svn path=/trunk/KDE/kdepim/mobile/; revision=1180944